--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-tests/report/**
+tests/basic/report/**
 tests/basic/test-plan.jtl
 tests/basic/jmeter.log
 jmeter.log
